--- a/best-practices/restrict_node_port/restrict_node_port.yaml
+++ b/best-practices/restrict_node_port/restrict_node_port.yaml
@@ -11,7 +11,7 @@ metadata:
       A Kubernetes Service of type NodePort uses a host port to receive traffic from 
       any source. A NetworkPolicy cannot be used to control traffic to host ports. 
       Although NodePort Services can be useful, their use must be limited to Services 
-      with additional upstream security checks. This sample validates that any new Services
+      with additional upstream security checks. This policy validates that any new Services
       do not use the `NodePort` type.
 spec:
   rules:
