--- a/cert-manager/restrict-issuer.yaml
+++ b/cert-manager/restrict-issuer.yaml
@@ -10,7 +10,7 @@ metadata:
     policies.kyverno.io/description: >-
       Certificates for trusted domains should always be steered to a controlled issuer to
       ensure the chain of trust is appropriate for that application. Users may otherwise be
-      able to create their own issuers and sign certificates for other domains. This sample
+      able to create their own issuers and sign certificates for other domains. This policy
       ensures that a certificate request for a specific domain uses a designated ClusterIssuer.
 spec:
   validationFailureAction: audit
