--- a/other/add-imagepullsecrets.yaml
+++ b/other/add-imagepullsecrets.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/description: >-
       Images coming from certain registries require authentication in order to pull them,
       and a Kubernetes imagePullSecret is mounted into a Pod to supply those credentials.
-      This sample searches for images coming from a registry called `corp.reg.com` and,
+      This policy searches for images coming from a registry called `corp.reg.com` and,
       if found, will mutate the Pod to add an imagePullSecret called `my-secret`.
 spec:
   background: false
