--- a/other/add-pod-proxies.yaml
+++ b/other/add-pod-proxies.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/description: >-
       In restricted environments, Pods may not be allowed to egress directly to all destinations
       and some overrides to specific addresses may need to go through a corporate proxy.
-      This sample adds proxy information to Pods in the form of environment variables.
+      This policy adds proxy information to Pods in the form of environment variables.
       It will add the `env` array if not present. If any Pods have any of these
       env vars, they will be overwritten with the value(s) in this policy.
 spec:
