--- a/other/add_labels.yaml
+++ b/other/add_labels.yaml
@@ -10,7 +10,7 @@ metadata:
     policies.kyverno.io/description: >-
       Labels are used as an important source of metadata describing objects in various ways
       or triggering other functionality. Labels are also a very basic concept and should be
-      used throughout Kubernetes. This sample performs a simple mutation which adds a label
+      used throughout Kubernetes. This policy performs a simple mutation which adds a label
       `foo=bar` to Pods, Services, ConfigMaps, and Secrets.
 spec:
   rules:
