--- a/other/add_nodeSelector.yaml
+++ b/other/add_nodeSelector.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/description: >-
       The nodeSelector field uses labels to select the node which node a Pod can be scheduled on.
       This can be useful when Pods have specific needs that only certain nodes in a cluster can provide.
-      This sample adds the nodeSelector field to a Pod spec and configures it with two labels as shown below.
+      This policy adds the nodeSelector field to a Pod spec and configures it with two labels as shown below.
 spec:
   background: false
   rules:
