--- a/other/add_volume_deployment.yaml
+++ b/other/add_volume_deployment.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/description: >-
       Some Kubernetes applications like HashiCorp Vault must perform some modifications
       to resources in order to invoke their specific functionality. Often times, that functionality
-      is controlled by the presence of a label or specific annotation. This sample, based on HashiCorp
+      is controlled by the presence of a label or specific annotation. This policy, based on HashiCorp
       Vault, adds a volume and volumeMount to a Deployment if there is an annotation called
       "vault.k8s.corp.net/inject=enabled" present.
 spec:
