--- a/other/create_pod_antiaffinity.yaml
+++ b/other/create_pod_antiaffinity.yaml
@@ -8,7 +8,7 @@ metadata:
     policies.kyverno.io/subject: Deployment, Pod
     policies.kyverno.io/description: >-
       Applications may involve multiple replicas of the same Pod for availability as well as scale
-      purposes, yet Kubernetes does not by default provide a solution for availability. This sample
+      purposes, yet Kubernetes does not by default provide a solution for availability. This policy
       sets a Pod anti-affinity configuration on Deployments which contain an `app` label if it is
       not already present.
 spec:
