--- a/other/inject_sidecar_deployment.yaml
+++ b/other/inject_sidecar_deployment.yaml
@@ -10,7 +10,7 @@ metadata:
       The sidecar pattern is very common in Kubernetes whereby other applications can
       insert components via tacit modification of a submitted resource. This is, for example,
       often how service meshes and secrets applications are able to function transparently.
-      This sample injects a sidecar container, initContainer, and volume into Pods that match
+      This policy injects a sidecar container, initContainer, and volume into Pods that match
       an annotation called `vault.hashicorp.com/agent-inject: true`. 
 spec:
   background: false
