--- a/other/restrict_automount_sa_token.yaml
+++ b/other/restrict_automount_sa_token.yaml
@@ -12,7 +12,7 @@ metadata:
       The ServiceAccount may be assigned roles allowing Pods to access API resources.
       Blocking this ability is an extension of the least privilege best practice and should
       be followed if Pods do not need to speak to the API server to function. 
-      This sample ensures that mounting of these ServiceAccount tokens is blocked.
+      This policy ensures that mounting of these ServiceAccount tokens is blocked.
 spec:
   rules:
   - name: validate-automountServiceAccountToken
