--- a/other/restrict_ingress_classes.yaml
+++ b/other/restrict_ingress_classes.yaml
@@ -10,7 +10,7 @@ metadata:
     policies.kyverno.io/description: >-
       Ingress classes should only be allowed which match up to deployed Ingress controllers
       in the cluster. Allowing users to define classes which cannot be satisfied by a deployed
-      Ingress controller can result in either no or undesired functionality. This sample checks
+      Ingress controller can result in either no or undesired functionality. This policy checks
       Ingress resources and only allows those which define `HAProxy` or `nginx` in the respective
       annotation. This annotation has largely been replaced as of Kubernetes 1.18 with the IngressClass
       resource.
