--- a/other/restrict_loadbalancer.yaml
+++ b/other/restrict_loadbalancer.yaml
@@ -11,7 +11,7 @@ metadata:
       Especially in cloud provider environments, a Service having type LoadBalancer will cause the
       provider to respond by creating a load balancer somewhere in the customer account. This adds
       cost and complexity to a deployment. Without restricting this ability, users may easily
-      overrun established budgets and security practices set by the organization. This sample restricts
+      overrun established budgets and security practices set by the organization. This policy restricts
       use of the Service type LoadBalancer.
 spec:
   validationFailureAction: audit
