--- a/other/restrict_pod_count_per_node.yaml
+++ b/other/restrict_pod_count_per_node.yaml
@@ -11,7 +11,7 @@ metadata:
     policies.kyverno.io/description: >-
       Sometimes Kubernetes Nodes may have a maximum number of Pods they can accommodate due to
       resources outside CPU and memory such as licensing, or in some
-      development cases. This sample restricts Pod count on a Node named `minikube` to be no more than 10.
+      development cases. This policy restricts Pod count on a Node named `minikube` to be no more than 10.
     # pod-policies.kyverno.io/autogen-controllers: None
 spec:
   validationFailureAction: audit
