--- a/other/spread_pods_across_topology.yaml
+++ b/other/spread_pods_across_topology.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/description: >-
       Deployments to a Kubernetes cluster with multiple availability zones often need to
       distribute those replicas to align with those zones to ensure site-level failures
-      do not impact availability. This sample policy matches Deployments with the label
+      do not impact availability. This policy policy matches Deployments with the label
       `distributed=required` and mutates them to spread Pods across zones.
 spec:
   rules:
