--- a/other/sync_secrets.yaml
+++ b/other/sync_secrets.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/description: >-
       Secrets like registry credentials often need to exist in multiple
       Namespaces so Pods there have access. Manually duplicating those Secrets
-      is time consuming and error prone. This sample will copy a
+      is time consuming and error prone. This policy will copy a
       Secret called `regcred` which exists in the `default` Namespace to
       new Namespaces when they are created. It will also push updates to
       the copied Secrets should the source Secret be changed.
