--- a/pod-security/baseline/disallow-host-path/disallow-host-path.yaml
+++ b/pod-security/baseline/disallow-host-path/disallow-host-path.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/description: >-
       HostPath volumes let Pods use host directories and volumes in containers.
       Using host resources can be used to access shared data or escalate privileges
-      and should not be allowed. This sample ensures no hostPath volumes are in use.
+      and should not be allowed. This policy ensures no hostPath volumes are in use.
 spec:
   validationFailureAction: audit
   background: true
