--- a/best-practices/disallow_default_namespace/disallow_default_namespace.yaml
+++ b/best-practices/disallow_default_namespace/disallow_default_namespace.yaml
@@ -12,7 +12,7 @@ metadata:
       Kubernetes Namespaces are an optional feature that provide a way to segment and 
       isolate cluster resources across multiple applications and users. As a best 
       practice, workloads should be isolated with Namespaces. Namespaces should be required 
-      and the default (empty) namespace should not be used. This sample validates that Pods
+      and the default (empty) namespace should not be used. This policy validates that Pods
       specify a Namespace name other than `default`.
 spec:
   validationFailureAction: audit
