--- a/best-practices/require_drop_all/require_drop_all.yaml
+++ b/best-practices/require_drop_all/require_drop_all.yaml
@@ -10,7 +10,7 @@ metadata:
     policies.kyverno.io/description: >-
       Capabilities permit privileged actions without giving full root access. All 
       capabilities should be dropped from a Pod, with only those required added back.
-      This sample ensures that all containers explicitly specify the `drop: ["ALL"]`
+      This policy ensures that all containers explicitly specify the `drop: ["ALL"]`
       ability.
 spec:
   validationFailureAction: audit
