--- a/best-practices/require_probes/require_probes.yaml
+++ b/best-practices/require_probes/require_probes.yaml
@@ -14,7 +14,7 @@ metadata:
       `livenessProbe` is performed by the kubelet to determine if the Pod's containers 
       are running or need to be restarted. A `readinessProbe` is used by Services 
       and Deployments to determine if the Pod is ready to receive network traffic.
-      This sample validates that all containers have liveness and readiness probes by
+      This policy validates that all containers have liveness and readiness probes by
       ensuring the `periodSeconds` field is greater than zero.
 spec:
   validationFailureAction: audit
