--- a/best-practices/require_ro_rootfs/require_ro_rootfs.yaml
+++ b/best-practices/require_ro_rootfs/require_ro_rootfs.yaml
@@ -11,7 +11,7 @@ metadata:
       A read-only root file system helps to enforce an immutable infrastructure strategy; 
       the container only needs to write on the mounted volume that persists the state. 
       An immutable root filesystem can also prevent malicious binaries from writing to the 
-      host system. This sample validates that containers define a securityContext
+      host system. This policy validates that containers define a securityContext
       with `readOnlyRootFilesystem: true`.
 spec:
   validationFailureAction: audit
