--- a/other/always-pull-images.yaml
+++ b/other/always-pull-images.yaml
@@ -10,7 +10,7 @@ metadata:
     policies.kyverno.io/description: >-
       By default, images that have already been pulled can be accessed by other
       Pods without re-pulling them if the name and tag are known. In multi-tenant scenarios,
-      this may be undesirable. This sample mutates all incoming Pods to set their
+      this may be undesirable. This policy mutates all incoming Pods to set their
       imagePullPolicy to Always. An alternative to the Kubernetes admission controller
       AlwaysPullImages.
 spec:
