--- a/other/disallow_secrets_from_env_vars.yaml
+++ b/other/disallow_secrets_from_env_vars.yaml
@@ -10,7 +10,7 @@ metadata:
     policies.kyverno.io/description: >-
       Secrets used as environment variables containing sensitive information may, if not carefully controlled, 
       be printed in log output which could be visible to unauthorized people and captured in forwarding
-      applications. This sample disallows using Secrets as environment variables.
+      applications. This policy disallows using Secrets as environment variables.
 spec:
   validationFailureAction: audit
   rules:
