--- a/other/imagepullpolicy-always.yaml
+++ b/other/imagepullpolicy-always.yaml
@@ -10,7 +10,7 @@ metadata:
     policies.kyverno.io/description: >-
       If the `latest` tag is allowed for images, it is a good idea to have the
       imagePullPolicy field set to `Always` to ensure should that tag be overwritten that future
-      pulls will get the updated image. This sample validates the imagePullPolicy is set to `Always`
+      pulls will get the updated image. This policy validates the imagePullPolicy is set to `Always`
       when the `latest` tag is specified explicitly or where a tag is not defined at all.
 spec:
   validationFailureAction: audit
