--- a/other/limit_containers_per_pod.yaml
+++ b/other/limit_containers_per_pod.yaml
@@ -11,7 +11,7 @@ metadata:
       Pods can have many different containers which
       are tightly coupled. It may be desirable to limit the amount of containers that
       can be in a single Pod to control best practice application or so policy can
-      be applied consistently. This sample checks all Pods to ensure they have
+      be applied consistently. This policy checks all Pods to ensure they have
       no more than four containers.
 spec:
   background: false
