--- a/other/memory-requests-equal-limits.yaml
+++ b/other/memory-requests-equal-limits.yaml
@@ -11,7 +11,7 @@ metadata:
     policies.kyverno.io/minversion: 1.3.6
     policies.kyverno.io/description: >-
       Pods which have memory limits equal to requests are given a QoS class of Guaranteed
-      which is the highest schedulable class. This sample checks that all containers in
+      which is the highest schedulable class. This policy checks that all containers in
       a given Pod have memory requests equal to limits.
 spec:
   validationFailureAction: audit
