--- a/other/restrict_annotations.yaml
+++ b/other/restrict_annotations.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/subject: Pod, Annotation
     policies.kyverno.io/description: >-
       Some annotations control functionality driven by other cluster-wide tools and are not
-      normally set by some class of users. This sample prevents the use of an annotation beginning
+      normally set by some class of users. This policy prevents the use of an annotation beginning
       with `fluxcd.io/`. This can be useful to ensure users either
       don't set reserved annotations or to force them to use a newer version of an annotation.
     pod-policies.kyverno.io/autogen-controllers: None
