--- a/other/restrict_controlplane_scheduling.yaml
+++ b/other/restrict_controlplane_scheduling.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/description: >-
       Scheduling non-system Pods to control plane nodes (which run kubelet) is often undesirable
       because it takes away resources from the control plane components and can represent
-      a possible security threat vector. This sample prevents users from setting a toleration
+      a possible security threat vector. This policy prevents users from setting a toleration
       in a Pod spec which allows running on control plane nodes
       with the taint key `node-role.kubernetes.io/master`.   
 spec:
