--- a/other/restrict_ingress_host.yaml
+++ b/other/restrict_ingress_host.yaml
@@ -11,7 +11,7 @@ metadata:
     policies.kyverno.io/description: >-
       An Ingress host is a URL at which services may be made available externally. In most cases,
       these hosts should be unique across the cluster to ensure no routing conflicts occur.
-      This sample checks an incoming Ingress resource to ensure its hosts are unique to the cluster.
+      This policy checks an incoming Ingress resource to ensure its hosts are unique to the cluster.
 spec:
   validationFailureAction: audit
   background: false
