--- a/other/unique-ingress-paths.yaml
+++ b/other/unique-ingress-paths.yaml
@@ -10,7 +10,7 @@ metadata:
     policies.kyverno.io/minversion: 1.3.6
     policies.kyverno.io/description: >-
       Just like the need to ensure uniqueness among Ingress hosts, there is a need to have the paths
-      be unique as well. This sample checks an incoming Ingress to ensure its root path does not conflict with another
+      be unique as well. This policy checks an incoming Ingress to ensure its root path does not conflict with another
       root path in a different Namespace. It requires that incoming Ingress resources have a single
       rule with a single path only and assumes the root path is specified explicitly in an
       existing Ingress rule (ex., when blocking /foo/bar /foo must exist by itself and not part of
