--- a/pod-security/baseline/disallow-adding-capabilities/disallow-adding-capabilities.yaml
+++ b/pod-security/baseline/disallow-adding-capabilities/disallow-adding-capabilities.yaml
@@ -8,7 +8,7 @@ metadata:
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Capabilities permit privileged actions without giving full root access.
-      Adding capabilities beyond the default set must not be allowed. This sample
+      Adding capabilities beyond the default set must not be allowed. This policy
       ensures users cannot add any additional capabilities to a Pod.
 spec:
   validationFailureAction: audit
