--- a/pod-security/baseline/disallow-host-namespaces/disallow-host-namespaces.yaml
+++ b/pod-security/baseline/disallow-host-namespaces/disallow-host-namespaces.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/description: >-
       Host namespaces (Process ID namespace, Inter-Process Communication namespace, and
       network namespace) allow access to shared information and can be used to elevate
-      privileges. Pods should not be allowed access to host namespaces. This sample ensures
+      privileges. Pods should not be allowed access to host namespaces. This policy ensures
       fields which make use of these host namespaces are set to `false`.
 spec:
   validationFailureAction: audit
