--- a/pod-security/baseline/disallow-host-ports/disallow-host-ports.yaml
+++ b/pod-security/baseline/disallow-host-ports/disallow-host-ports.yaml
@@ -8,7 +8,7 @@ metadata:
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Access to host ports allows potential snooping of network traffic and should not be
-      allowed, or at minimum restricted to a known list. This sample ensures the `hostPort`
+      allowed, or at minimum restricted to a known list. This policy ensures the `hostPort`
       fields are empty.
 spec:
   validationFailureAction: audit
