--- a/pod-security/baseline/disallow-proc-mount/disallow-proc-mount.yaml
+++ b/pod-security/baseline/disallow-proc-mount/disallow-proc-mount.yaml
@@ -7,7 +7,7 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      The default /proc masks are set up to reduce attack surface and should be required. This sample
+      The default /proc masks are set up to reduce attack surface and should be required. This policy
       ensures nothing but the default procMount can be specified.
 spec:
   validationFailureAction: audit
