--- a/pod-security/baseline/restrict-sysctls/restrict-sysctls.yaml
+++ b/pod-security/baseline/restrict-sysctls/restrict-sysctls.yaml
@@ -11,7 +11,7 @@ metadata:
       host, and should be disallowed except for an allowed "safe" subset. A
       sysctl is considered safe if it is namespaced in the container or the
       Pod, and it is isolated from other Pods or processes on the same Node.
-      This sample ensures that only those "safe" subsets can be specified in
+      This policy ensures that only those "safe" subsets can be specified in
       a Pod.
 spec:
   validationFailureAction: audit
