--- a/pod-security/restricted/deny-privilege-escalation/deny-privilege-escalation.yaml
+++ b/pod-security/restricted/deny-privilege-escalation/deny-privilege-escalation.yaml
@@ -8,7 +8,7 @@ metadata:
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Privilege escalation, such as via set-user-ID or set-group-ID file mode, should not be allowed.
-      This sample ensures the `allowPrivilegeEscalation` fields are either undefined
+      This policy ensures the `allowPrivilegeEscalation` fields are either undefined
       or set to `false`.
 spec:
   background: true
