--- a/pod-security/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
+++ b/pod-security/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
@@ -7,7 +7,7 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      Containers must be required to run as non-root users. This sample ensures
+      Containers must be required to run as non-root users. This policy ensures
       `runAsNonRoot` is set to `true`.
 spec:
   background: true
