--- a/other/add-imagepullsecrets.yaml
+++ b/other/add-imagepullsecrets.yaml
@@ -8,9 +8,10 @@ metadata:
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Images coming from certain registries require authentication in order to pull them,
-      and a Kubernetes imagePullSecret is mounted into a Pod to supply those credentials.
-      This policy searches for images coming from a registry called `corp.reg.com` and,
-      if found, will mutate the Pod to add an imagePullSecret called `my-secret`.
+      and the kubelet uses this information in the form of an imagePullSecret to pull 
+      those images on behalf of your Pod. This policy searches for images coming from a
+      registry called `corp.reg.com` and, if found, will mutate the Pod to add an
+      imagePullSecret called `my-secret`.
 spec:
   background: false
   rules:
