--- a/other/pod_lifetime_annotation/enforce_pod_duration.yaml
+++ b/other/pod_lifetime_annotation/enforce_pod_duration.yaml
@@ -9,7 +9,7 @@ metadata:
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       This validation is valuable when annotations are used to define durations,
-      such as to ensure a pod lifetime annotation does not exceed some site specific max threshold.
+      such as to ensure a Pod lifetime annotation does not exceed some site specific max threshold.
       Pod lifetime annotation can be no greater than 8 hours.
 spec:
   background: false
