--- a/other/imagepullpolicy_always/imagepullpolicy-always.yaml
+++ b/other/imagepullpolicy_always/imagepullpolicy-always.yaml
@@ -3,12 +3,15 @@ kind: ClusterPolicy
 metadata:
   name: imagepullpolicy-always
   annotations:
-    policies.kyverno.io/title: Set imagePullPolicy
+    policies.kyverno.io/title: Require imagePullPolicy Always
     policies.kyverno.io/category: Sample
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      Sample policy that sets imagePullPolicy to "Always" when the "latest" tag is used.
+      If the `latest` tag is allowed for images, it is a good idea to have the
+      imagePullPolicy field set to `Always` to ensure should that tag be overwritten that future
+      pulls will get the updated image. This policy validates the imagePullPolicy is set to `Always`
+      when the `latest` tag is specified explicitly or where a tag is not defined at all.
 spec:
   validationFailureAction: audit
   background: false
@@ -24,6 +27,5 @@ spec:
       pattern:
         spec:
           containers:
-          - (image): "*:latest | !*:* "
+          - (image): "*:latest | !*:*"
             imagePullPolicy: "Always"
-            
