--- a/other/require_deployments_have_multiple_replicas/require_deployments_have_multiple_replicas.yaml
+++ b/other/require_deployments_have_multiple_replicas/require_deployments_have_multiple_replicas.yaml
@@ -8,10 +8,11 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Deployment
     policies.kyverno.io/description: >-
-      Sample policy that requires more than one replica for deployments.    
+      Deployments with a single replica cannot be highly available and thus the application
+      may suffer downtime if that one replica goes down. This policy validates that Deployments
+      have more than one replica.    
 spec:
-  validationFailureAction: enforce
-  background: true
+  validationFailureAction: audit
   rules:
     - name: deployment-has-multiple-replicas
       match:
