--- a/other/restrict_controlplane_scheduling/restrict_controlplane_scheduling.yaml
+++ b/other/restrict_controlplane_scheduling/restrict_controlplane_scheduling.yaml
@@ -7,11 +7,13 @@ metadata:
     policies.kyverno.io/category: Sample
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
-      This policy prevents users from setting a toleration
+      Scheduling non-system Pods to control plane nodes (which run kubelet) is often undesirable
+      because it takes away resources from the control plane components and can represent
+      a possible security threat vector. This policy prevents users from setting a toleration
       in a Pod spec which allows running on control plane nodes
-      with the taint key "node-role.kubernetes.io/master".   
+      with the taint key `node-role.kubernetes.io/master`.   
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: audit
   background: false
   rules:
   - name: restrict-controlplane-scheduling-master
