--- a/other/restrict_loadbalancer/restrict_loadbalancer.yaml
+++ b/other/restrict_loadbalancer/restrict_loadbalancer.yaml
@@ -8,7 +8,11 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Service
     policies.kyverno.io/description: >-
-      Sample policy to restrict use of Service type LoadBalancer.
+      Especially in cloud provider environments, a Service having type LoadBalancer will cause the
+      provider to respond by creating a load balancer somewhere in the customer account. This adds
+      cost and complexity to a deployment. Without restricting this ability, users may easily
+      overrun established budgets and security practices set by the organization. This policy restricts
+      use of the Service type LoadBalancer.
 spec:
   validationFailureAction: audit
   rules:
