--- a/other/restrict_loadbalancer/test.yaml
+++ b/other/restrict_loadbalancer/test.yaml
@@ -1,6 +1,6 @@
 name: no-loadbalancer-service
 policies:
-  -  no-loadbalancer-service.yaml
+  -  restrict_loadbalancer.yaml
 resources:
   -  resource.yaml
 results:
